--- a/src/pages/Group/index.css
+++ b/src/pages/Group/index.css
@@ -2,11 +2,13 @@
     margin: 75px 0;
 }
 .container{
-
+    width: 90%;
+    margin-top: 50px;
 }
 h1{
     text-align: center;
-    font-weight: bold;
+    font-weight: 900; 
+    font-size: 4rem;
     letter-spacing: 2px;
     color: #333;
     padding-bottom: 10px;
@@ -31,7 +33,6 @@ h1:after{
 .profile h2{
     font-size: 22px;
     font-weight: bold;
-    
 }
 .profile h3{
     font-size: 15px;
@@ -47,7 +48,6 @@ h1:after{
     left:0;
     top: 0;
     bottom:0;
-
 }
 
 .img-box img{
@@ -65,8 +65,8 @@ h1:after{
     left: 50%;
     transform: translateX(-50%);
     opacity: 0;
-
 }
+
 .img-box ul li{
     width: 30px;
     height: 30px;
@@ -93,7 +93,6 @@ h1:after{
 .img-box:after, .img-box ul, img-box ul li{
     transition: all 0.5s ease-in-out 0s;
 }
-img{
-    
-    height: 200px;
+.img-box img{
+    height: 270px;
 }
